# Tp_Compiladores

./: .gitignore  Makefile  README.md  cabal.project  docker-compose.yml
enunciado/: sl.org
relatorio/: relatorio3.tex
workspace/: sl.cabal
workspace/Slexamples/: arranjos.sl  fatorial.sl  identidade.sl  map.sl  operacoes.sl  struct.sl
workspace/src/: Main.hs
workspace/src/Backend/: SlWatGenerator.hs
workspace/src/Frontend/Lexer/: SlLexer.x  Token.hs
workspace/src/Frontend/Parser/: AstToTree.hs  SlParser.y
workspace/src/Frontend/Pretty/: SlPretty.hs
workspace/src/Frontend/Syntax/: SlSyntax.hs
workspace/src/Semantics/: SlInterpreter.hs  SlTypeChecker.hs  SlTypeEnv.hs
workspace/test/: LexerSpec.hs  ParserSpec.hs  Spec.hs
workspace/testes/: teste_arrays.sl  teste_avancado.sl  teste_execucao.sl  teste_inferencia.sl  teste_inferencia2.sl  teste_mochila.sl  teste_ordenacao.sl  teste_pilha.sl  teste_sala.sl  teste_wat.sl
